# IGME-740

./: .gitignore  README.md
01/: CMakeLists.txt  README.md
01/src/: CMakeLists.txt  main.cpp
02/: CMakeLists.txt  README.md
02/src/assignment/: CMakeLists.txt  input.cpp  main.cpp  main.h  menu.cpp  render.cpp
02/src/idle/: CMakeLists.txt  idle.cpp
02/src/interact/: CMakeLists.txt  interact.cpp
03/: CMakeLists.txt  README.md
03/src/2d_planet/: CMakeLists.txt  CMakelists.txt  main.cpp
03/src/2d_rotation/: CMakeLists.txt  CMakelists.txt  main.cpp
03/src/2d_transform/: CMakeLists.txt  CMakelists.txt  main.cpp
03/src/assignment/: CMakeLists.txt  geometry.cpp  keyboard.cpp  main.cpp  main.h  render.cpp
04/: CMakeLists.txt  README.md
04/shaders/: basic.frag  basic.vert  displacement.frag  displacement.vert  perFrag_lambert.frag  perFrag_lambert.vert  perFrag_phong.frag  perFrag_phong.vert  perVert_lambert.frag  perVert_lambert.vert  perVert_phong.vert  toon_shading.frag  toon_shading.vert
04/src/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  ShaderClass.cpp  ShaderClass.h  ShaderProgram.cpp  ShaderProgram.h  Text.h  main.cpp
05/: CMakeLists.txt
05/shaders/: c_shader.comp  f_shader.frag  v_shader.vert
05/src/assignment/: CMakeLists.txt  Camera.cpp  Camera.h  ParticleSystem.cpp  ParticleSystem.h  ShaderClass.cpp  ShaderClass.h  ShaderProgram.cpp  ShaderProgram.h  Text.h  lib  main.cpp
05/src/assignment/shaders/: c_shader.comp  f_shader.frag  v_shader.vert
06/: CMakeLists.txt
06/data/: geo.txt
06/shaders/: basic.frag  basic.vert
06/src/: Box.h  CMakeLists.txt  Camera.cpp  Camera.h  Light.h  Mesh.cpp  Mesh.h  Ray.h  Shader.h  ShaderClass.cpp  ShaderClass.h  ShaderProgram.cpp  Sphere.h  lib  main.cpp
